[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "distributed-rate-limiter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "redis>=5.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]